--- a/#src/scss/pages/_contacts.scss
+++ b/#src/scss/pages/_contacts.scss
@@ -2,18 +2,18 @@
   padding: 45px 0 62px;
   .social-list {
     margin-top: 17px;
-    gap: 12px;
+    li {
+      margin-right: 12px;
+    }
   }
 }
 
 .contact-links__wrapper {
   margin-top: 60px;
   display: flex;
-  gap: 113px;
   align-items: flex-end;
   @media screen and (max-width: 560px) {
     flex-wrap: wrap;
-    gap: 40px;
   }
 }
 
@@ -23,6 +23,10 @@
   font-weight: 600;
   text-decoration: none;
   color: $main-font-color;
+  margin-right: 113px;
+  @media screen and (max-width: 560px) {
+    margin-right: 40px;
+  }
   .btn {
     margin-right: 18px;
   }
@@ -46,7 +50,6 @@
 }
 .team-cards {
   display: flex;
-  gap: 9px;
   @media screen and (max-width: 1280px) {
     flex-wrap: wrap;
     justify-content: center;
@@ -62,6 +65,7 @@
   border: 1px solid #D9D9D9;
   padding: 39px 28px;
   transition: all 0.4s;
+  margin: 9px 9px 0 0;
   @media screen and (max-width: 540px) {
     width: 100%;
   }
