--- a/#src/scss/pages/_get-involved.scss
+++ b/#src/scss/pages/_get-involved.scss
@@ -1,6 +1,5 @@
 .get-involved-popup-link {
   display: flex;
-  gap: 18px;
   align-items: center;
   font-weight: 600;
   text-decoration: none;
