--- a/#src/scss/pages/_projects.scss
+++ b/#src/scss/pages/_projects.scss
@@ -138,14 +138,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 19px;
     margin: 0;
     &-wrapper {
       margin: 51px auto 0;
     }
     .social-list {
-      gap: 9px;
-      margin: 0;
+      margin: 0 19px 0 0;
+      li {
+        margin-right: 19px;
+      }
     }
     p {
       font-size: 0.875rem;
